apps/home-assistant/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: home-assistant
  labels:
    app.kubernetes.io/name: home-assistant
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
