apps/home-assistant/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: home-assistant
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`home.lab.jackhumes.com`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
  tls:
    secretName: home-assistant-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant-http
  namespace: home-assistant
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`home.lab.jackhumes.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
      services:
        - name: home-assistant
          port: 8123
